# aninamer

./: .gitignore  AGENTS.md  Dockerfile  README.md  config.toml.example  pyproject.toml
.github/workflows/: build-image.yml
aninamer/: __init__.py  __main__.py  apply.py  artifacts.py  chinese_variants.py  cli.py  config.py  episode_mapping.py  errors.py  json_utils.py  llm_client.py  logging_utils.py  monitoring.py  name_clean.py  openai_llm_client.py  pipeline.py  plan.py  plan_io.py  prompts.py  result_io.py  scanner.py  store.py  subtitles.py  telegram.py  tmdb_client.py  tmdb_resolve.py  webhook_delivery.py  worker.py
aninamer/api/: __main__.py  app.py  schemas.py  service.py
aninamer/service/: __init__.py  __main__.py  launcher.py
tests/: README.md  conftest.py  test_apply.py  test_apply_module.py  test_cli.py  test_cli_monitor.py  test_cli_run_command.py  test_cli_run_command_codex.py  test_episode_mapping.py  test_episode_mapping_unit.py  test_json_utils.py  test_log_path_artifacts.py  test_logging_instrumentation.py  test_monitor_and_two_stage_default.py  test_monitor_new_only_and_settle.py  test_name_clean.py  test_openai_integration_episode_mapping.py  test_openai_integration_tmdb_resolve.py  test_openai_llm_client.py  test_openai_llm_client_unit.py  test_openai_llm_no_reasoning_profile.py  test_plan_builder.py  test_prompts_episode_mapping.py  test_real_cases.py  test_scanner.py  test_subtitles.py  test_tmdb_query_cleaning.py  test_tmdb_resolve.py  test_tmdb_resolve_codex.py  test_tmdb_title_fallback.py
tests/api/: test_api_endpoints.py  (+1 more)
(+44 files in other folders)
