[project]
name = "aninamer"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = ["integration: tests that call real external services (OpenAI, TMDB)"]

[dependency-groups]
dev = ["pytest>=9.0.2"]
