[project]
name = "aninamer"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "psycopg[binary]>=3.2.9",
    "uvicorn>=0.35.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = ["integration: tests that call real external services (OpenAI, TMDB)"]

[dependency-groups]
dev = ["pytest>=9.0.2"]
